Declare binary communications explicitly for IJS, where the default behavior isn't clear for non-MS-VC compilers.

This makes the IJS code works correctly when compiled by mingw or borland.
It also fixes some issue for Watcom. Watcom-compiled client
still seems to be buggy (as in not inter-operating with the others).
Closes bug 688714.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@10234 a1074d23-0009-0410-80fe-cf8c14f379e6