gs/ijs/ijs_exec_win.c
@@ -26,6 +26,7 @@
 #include <windows.h>
 #include <io.h>
 #include <process.h>
+#include <fcntl.h>
 #include "ijs.h"
 #include "ijs_client.h"
 
@@ -75,9 +76,9 @@ ijs_exec_server(const char *server_cmd, int *pfd_to, int *pfd_from,
         CloseHandle(hPipeTemp);
     }
     if (flag)
-	flag = (fd_stdin_wr = _open_osfhandle((LONG)hChildStdinWr, 0)) != -1;
+	flag = (fd_stdin_wr = _open_osfhandle((LONG)hChildStdinWr, _O_BINARY)) != -1;
     if (flag)
-	flag = (fd_stdout_rd = _open_osfhandle((LONG)hChildStdoutRd, 0)) != -1;
+	flag = (fd_stdout_rd = _open_osfhandle((LONG)hChildStdoutRd, _O_BINARY)) != -1;
 
     /* Now create the child process. */
     if (flag) {
